minorfix, css bugg on firefox

--- a/app/assets/less/user/user-item.less
+++ b/app/assets/less/user/user-item.less
@@ -107,6 +107,7 @@
     outline: none;
     display: block;
     width: 114%;
+    clear: both;
 
     @media (max-width: 768px) and (min-width: 600px) {
       width: 109%;
